feat: create route for post
